# ksef_cli

./: .gitignore  README.md  pyproject.toml  requirements.txt  xxxxxx
.github/workflows/: python-package.yml
ksef_cli/: __init__.py  __main__.py  help.txt  ksef_cli.py  ksef_conf.py  ksef_log.py  ksef_tokens.py  main.py  readp12.py
sample/: test.py
template/: env.rc
tests/: helper.py  test0.py  test1.py
tests/conf/: kseftokens.yaml  kseftokenscert.yaml
tests/testdata/: FA_3_Przykład_9_pattern.xml
